syntax = "proto3";

option csharp_namespace = "AnyTime.API.Modules.Proposals.Protos";

package proposal;

import "Modules/Announcements/Protos/announcement.proto";

service ProposalContract {
  rpc List (ListProposalRequest) returns (stream ProposalReply);
  rpc Update (UpdateProposalRequest) returns (ProposalReply);
}

message ListProposalRequest {

}

message UpdateProposalRequest {
  string id = 1;
  string title = 2;
  string description = 3;
}


message ProposalReply {
  string id = 2;
  string description = 3;
  announcement.AnnouncementReply  announcement = 1;
}